package service

import (
	"context"

	conf "ABTest/apps/Micro/dynamic/internal/config"
	pb "ABTest/pkgs/proto/pb_dynamic"
)

// implement the interface
func (s *dynamicService) GetExperimentLayerBinding(ctx context.Context, req *pb.GetExperimentLayerBindingRequest) (resp *pb.GetExperimentLayerBindingResponse, err error) {
	conf.Log.Infof("GetExperimentLayerBinding service begin: %v", req)

	// 这里实现逻辑

	
	conf.Log.Infof("GetExperimentLayerBinding service end: %v", resp)
	return resp, nil
}
