package service

import (
	"context"

	conf "ABTest/apps/Micro/dynamic/internal/config"
	pb "ABTest/pkgs/proto/pb_dynamic"
)

// implement the interface
func (s *dynamicService) GetLayerExperiments(ctx context.Context, req *pb.GetLayerExperimentsRequest) (resp *pb.GetLayerExperimentsResponse, err error) {
	conf.Log.Infof("GetLayerExperiments service begin: %v", req)

	// 这里实现逻辑

	
	conf.Log.Infof("GetLayerExperiments service end: %v", resp)
	return resp, nil
}
